--- a/PushingTaskFollower/Web.config
+++ b/PushingTaskFollower/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PushingTaskFollower-20140304201037;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PushingTaskFollower-20140304201037.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="CLOUDANT_URL" value="https://cca79152-c9e2-4245-9b72-e4f295d33d7a.appharbor:KvfHquuTMKdVhqSLjCNQeaMn@cca79152-c9e2-4245-9b72-e4f295d33d7a.appharbor.cloudant.com" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
