--- a/PushingTaskFollower/PushingTaskFollower.csproj
+++ b/PushingTaskFollower/PushingTaskFollower.csproj
@@ -318,6 +318,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PTF.Core\PTF.Core.csproj">
+      <Project>{f992d2b9-3bec-4aa7-b976-b492e226b1fc}</Project>
+      <Name>PTF.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
